# kbot

./: .gitignore  readme.md
data/test_cases/test_circular/: completed_orders.txt
data/test_cases/test_circular/configuration/: products.yaml
data/test_cases/test_circular/orders/: orders_20201201.yaml
data/test_cases/test_random/configuration/: products.yaml
data/test_cases/test_random/orders/: orders_20201201.yaml
data/test_cases/wrong_entries_1/configuration/: products.yaml
data/test_cases/wrong_entries_2/configuration/: products.yaml
data/test_cases/wrong_entries_5/configuration/: products.yaml
data/test_cases/wrong_entries_6/orders/: orders_20201201.yaml
src/kbot_interfaces/: CMakeLists.txt  package.xml
src/kbot_launch/: CMakeLists.txt  package.xml
src/kbot_launch/launch/: rviz_conf.rviz  test1.launch.py  test2.launch.py  test3.launch.py
src/log/: latest_build
src/planner_cpp/: CMakeLists.txt  package.xml
src/planner_cpp/include/planner_cpp/: orderOptimizer.hpp  utils.hpp  utils_parsing.hpp  utils_shortest_path.hpp
src/planner_cpp/log/: latest_build
src/planner_cpp/src/: orderOptimizer.cpp  orderPublisher.cpp  posePublisher.cpp  tmp.cpp  tmp2.cpp  utils.cpp  utils_parsing.cpp  utils_shortest_path.cpp
src/planner_cpp/test/: tests.cpp
src/planner_cpp/test/test_data/orders/: orders_20201201.yaml
