<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_cpp</name>
  <version>0.0.0</version>
  <description>Exemplary order optimizer utilizing different ROS and C++ concepts</description>
  <maintainer email="rudolf.reiter@imtek.uni-freiburg.de">rudolf</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kbot_interfaces</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
